# who_are_you

./: .env.example  .gitignore  QUICK_START.md  check_env.py  convert_to_huggingface.py  environment.yml  main.py  pyproject.toml  repro_diagnostics.py
core/: area_solver.py  core.py  csv_master_creator.ipynb  gpu_gradient_descent.py  handler.py  new_gpu.py
datasets/: DATASET_CARD.md  usage_example.py
scripts/: create_env.sh  generate_metadata.py  reproduce_paper.sh
