[project]
name = "who-are-you"
version = "0.1.0"
description = "Who Are You - Audio Deepfake Detection through Vocal Tract Reconstruction"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.1",
    "numba>=0.59.0,<0.60.0",
    "llvmlite>=0.42.0,<0.43.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "sphfile>=1.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.19.0",
    "audiofile>=0.12.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchcodec>=0.2.0",
]

[project.optional-dependencies]
core = [
    "scikit-learn>=1.3.0",
    "pymongo>=4.5.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
